--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
 		"lint": "eslint . --ext .js,.jsx --fix"
 	},
 	"dependencies": {
+		"audit": "^0.0.6",
+		"fix": "^0.0.6",
 		"react": "18.2.0",
 		"react-dom": "18.2.0",
+		"styled-components": "^6.1.8",
 		"uuid": "9.0.0"
 	},
 	"devDependencies": {
